使用easyocr,可抓取文字位置並辨識文字，尚未整合

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,15 @@ venv/
 # Output folders
 assets/output/
 assets/temp/
+outputs/
+comic_output_*/
+analysis_output_*/
+ocr_result.png
+
+# Generated files
+*.png
+!complete_4panel_comic_1.png
+!NotoSansTC-Regular.ttf
 
 # Config files
 config/config.yaml
